[metadata]
# replace with your username:
name = adheya
version = 0.4
author = Alexander Gregory Morano
author_email = amorano@gmail.com
description = A light object wrapper for the DearPyGUI API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amorano/adheya
project_urls =
	Bug Tracker = https://github.com/Amorano/adheya/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= adheya
packages = find:
python_requires = >=3.8

[options.packages.find]
where = adheya